--- a/src/Pages/Shared/NavBar/NavBar.css
+++ b/src/Pages/Shared/NavBar/NavBar.css
@@ -4,6 +4,12 @@
   padding: 20px 0 !important;
 }
 
+.navbar img {
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+}
+
 .navbar a {
   margin-right: 20px !important;
   font-size: 18px;
@@ -12,7 +18,8 @@
 }
 
 .title {
-  font-size: 30px !important;
+  font-size: 25px !important;
+  color: #f91944 !important;
 }
 
 .main__button {
@@ -28,8 +35,18 @@
   transition: all 0.5s;
 }
 
+.active__item {
+  color: #f91944 !important;
+}
+
 .main__button:hover {
   border: 2px solid #f91944;
   color: #f91944 !important;
   background-color: #fff;
+}
+
+@media only screen and (max-width: 767px) {
+  .title {
+    font-size: 20px !important;
+  }
 }
