--- a/src/Pages/AuthPage/Login/Login.css
+++ b/src/Pages/AuthPage/Login/Login.css
@@ -6,6 +6,8 @@
   margin: 80px auto;
   width: 1000px;
   border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px lightgray;
 }
 
 @media only screen and (max-width: 1050px) {
