--- a/src/Pages/Shared/NavBar/NavBar.css
+++ b/src/Pages/Shared/NavBar/NavBar.css
@@ -4,6 +4,10 @@
   padding: 20px 0 !important;
 }
 
+.navbar .fa-sign-in-alt {
+  margin-right: 10px;
+}
+
 .navbar img {
   width: 40px;
   height: 40px;
